# thimble

./: .gitignore  CMakeLists.txt  Makefile  ast.dot  draw.sh  gen.sh  lex.l  m.txt  main.cpp  parse.y  rulegen.sh  sample.txt
include/: ast.h  ast.hpp  datatype.hpp  draw.h  lexer.hpp  operator.hpp  parse.tab.h  parser.hpp  token.hpp  vector.h
rules/: grammar.y  tokens.l
src/: ast.c  draw.c  lex.yy.c  lexer.cpp  main.c  parse.tab.c  parser.cpp  vector.c
tests/: lexer.cpp  program1.txt
